--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "request_test",
+  "homepage": "https://github.com/SemaJenya/request_test",
   "version": "0.0.1",
   "description": "test",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "webpack --mode production",
     "dev": "webpack serve"
   },
@@ -17,6 +21,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
     "cssnano": "^6.0.1",
+    "gh-pages": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.3",
